FIXED GDL90 parser that was crashing program under heavy UDP load (called crc function w/ negative length packet) Fixed gps StaleValue  wrapper not being static Cleaned up formatting on display
Former-commit-id: a7f61324895547c4d740cc6c9330204c93451ecc
Former-commit-id: 81c8e57cec5ea2011ce8a6d5ceb1a3f8e62acdf9

--- a/TODO
+++ b/TODO
@@ -4,3 +4,8 @@
 * Keep working on mag dip bank
 
 * ? Log GDL90 and NMEA strings?
+
+* Make automated testing target 
+	python ~/src/gdl90/gdl90_sender.py -p 4000 -f ./udp4000.dat --delay 1
+	catsleep ./udp7891.dat  | socat -u - udp-sendto:255.255.255.255:7891,broadcast
+
