Look for makeEspArduino makefile in the libraries directory
Former-commit-id: 29058edf59352b45ead07d356b873299bae01a18

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Switch to the standard SD library, quit using esp32_micro_sd library
+y
 
 
 * Run hardware test of new gpsTrackGDL90 stale data and timeout 
